August 27, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/plugins.h: Added prototype and interface for
   SPUplayCDDAchannel().
 * libpcsxcore/plugins.c: Likewise.

August 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/pcsx.rc: Completed the Cheat Search dialog.
 * win32/resource.h: Likewise.
 * win32/gui/CheatDlg.c: Implemented the Cheat Search dialog. Fixed MinGW
   compilation issue.
 * win32/gui/pcsx.dev: Fixed Dev-C++ build.
 * win32/WndMain.c: Moved Language menu into the Config menu.
 * gui/Cheat.c: Clamp values when editing value in Cheat Search dialog.
 * doc/tweaks.txt: Added instructions to allow CD-DA playing when using
   image files (as suggested by dario86).

August 24, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/gui/WndMain.c: Set the language to the OS language by default.
 * win32/gui/ConfigurePlugins.c: Made some strings translatable.
 * win32/gui/CheatDlg.c: Fixed incorrect usage of SysMessage().
 * win32/pcsx.rc, win32/resource.h: Fixed manifest.

August 23, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Added "..." in menu items which will popup a dialog.
 * po/pcsx.pot, po/zh_CN.po, po/zh_TW.po: Updated.

August 22, 2009 dario86

 * libpcsxcore/cdrom.c: Demute the CD-DA by default, which fixes the music
   problem with Tekken 1.

August 22, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/misc.c: Also check for PSX.EXE in CheckCdrom(). Added support
   for CPE binaries. Returns -1 in Load() if EXE is not found. Print the
   EXE loading error messages in console instead of a message box.
 * gui/Gtk2Gui.c: Show files with .cpe extension in the Load EXE dialog box.
 * debian/rules: Removed dh_desktop.

August 17, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/peopsxgl/gpu.c: Made the name of the plugin translatable.
 * plugins/dfsound/spu.c: Likewise.
 * plugins/dfxvideo/gpu.c: Likewise.
 * plugins/dfinput/pad.c: Likewise.
 * plugins/dfcdrom/cdr.c: Likewise.